--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		.main
 		{
 			width: 100%;
-			height: 95vh;
+			max-height: 95vh;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
